using System.Collections;
using System.Collections.Generic;

public class GameConstants 
{
    public const string GROUNDED_ANIMATION_CONDITION = "isGrounded";
    public const string MOVE_HORIZONTALLY_ANIMATION_CONDITION = "isXMoving";
    public const string HURT_ANIMATION_CONDITION_TRIGGER = "hurt";

    public const string PLAYER_TAG = "Player";
    public const string HEART_TAG = "Heart";
    public const string PLATFORM_TAG = "Platform";
    public const string TRAMPOLINE_TAG = "Trampoline";
    public const string KEY_TAG = "Key";
    public const string ENEMY_TAG = "Enemy";
    public const string HERO_KEY_TAG = "HeroKey";

    public const string FULL_KEY_SPRITE_NAME = "HudKeyFull";
}
